--- a/Joystick_SPI_tester/Joystick_SPI_tester.srcs/sources_1/bd/joysticktester/ui/bd_355d683b.ui
+++ b/Joystick_SPI_tester/Joystick_SPI_tester.srcs/sources_1/bd/joysticktester/ui/bd_355d683b.ui
@@ -5,23 +5,23 @@
    "ExpandedHierarchyInLayout":"",
    "guistr":"# # String gsaved with Nlview 7.0r4  2019-12-20 bk=1.5203 VDI=41 GEI=36 GUI=JA:10.0 TLS
 #  -string -flagsOSRD
-preplace port SPI_M_0 -pg 1 -lvl 5 -x 910 -y -320 -defaultsOSRD
-preplace port sys_clock -pg 1 -lvl 0 -x -300 -y -270 -defaultsOSRD
-preplace port reset -pg 1 -lvl 0 -x -300 -y -290 -defaultsOSRD
-preplace inst axi4stream_spi_master_0 -pg 1 -lvl 4 -x 780 -y -310 -defaultsOSRD
-preplace inst clk_wiz_0 -pg 1 -lvl 1 -x -110 -y -280 -defaultsOSRD
-preplace inst proc_sys_reset_0 -pg 1 -lvl 2 -x 240 -y -310 -defaultsOSRD
-preplace inst digilent_jstk2_0 -pg 1 -lvl 3 -x 550 -y -590 -defaultsOSRD
-preplace netloc sys_clock_1 1 0 1 NJ -270
-preplace netloc reset_1 1 0 2 -280 -350 -20
-preplace netloc clk_wiz_0_clk_out1 1 1 3 -10 -410 410 -310 N
-preplace netloc clk_wiz_0_locked 1 1 1 N -270
-preplace netloc proc_sys_reset_0_peripheral_aresetn 1 2 2 420 -290 N
-preplace netloc axi4stream_spi_master_0_SPI_M 1 4 1 N -320
-preplace netloc axi4stream_spi_master_0_M_AXIS 1 2 3 430 -390 NJ -390 890
-preplace netloc digilent_jstk2_0_m_axis 1 3 1 670 -630n
-levelinfo -pg 1 -300 -110 240 550 780 910
-pagesize -pg 1 -db -bbox -sgen -420 -690 1020 240
+preplace port SPI_M_0 -pg 1 -lvl 5 -x 1070 -y 80 -defaultsOSRD
+preplace port sys_clock -pg 1 -lvl 0 -x 0 -y 150 -defaultsOSRD
+preplace port reset -pg 1 -lvl 0 -x 0 -y 70 -defaultsOSRD
+preplace inst axi4stream_spi_master_0 -pg 1 -lvl 4 -x 940 -y 90 -defaultsOSRD
+preplace inst clk_wiz_0 -pg 1 -lvl 1 -x 110 -y 140 -defaultsOSRD
+preplace inst proc_sys_reset_0 -pg 1 -lvl 2 -x 380 -y 90 -defaultsOSRD
+preplace inst digilent_jstk2_0 -pg 1 -lvl 3 -x 690 -y 110 -defaultsOSRD
+preplace netloc sys_clock_1 1 0 1 NJ 150
+preplace netloc reset_1 1 0 2 20 70 NJ
+preplace netloc clk_wiz_0_clk_out1 1 1 3 200 190 550 20 830J
+preplace netloc clk_wiz_0_locked 1 1 1 210 130n
+preplace netloc proc_sys_reset_0_peripheral_aresetn 1 2 2 560 30 820J
+preplace netloc axi4stream_spi_master_0_SPI_M 1 4 1 N 80
+preplace netloc axi4stream_spi_master_0_M_AXIS 1 2 3 570 10 NJ 10 1050
+preplace netloc digilent_jstk2_0_m_axis 1 3 1 810 70n
+levelinfo -pg 1 0 110 380 690 940 1070
+pagesize -pg 1 -db -bbox -sgen -120 0 1180 230
 "
 }
 0
