--- a/AuDiOcOnSoLe/AuDiOcOnSoLe.srcs/sources_1/bd/BlockDesign/ui/bd_1f67aeeb.ui
+++ b/AuDiOcOnSoLe/AuDiOcOnSoLe.srcs/sources_1/bd/BlockDesign/ui/bd_1f67aeeb.ui
@@ -1,12 +1,24 @@
 {
    "ActiveEmotionalView":"Default View",
-   "Default View_ScaleFactor":"1.0",
-   "Default View_TopLeft":"-406,-212",
+   "Default View_ScaleFactor":"0.782243",
+   "Default View_TopLeft":"-451,-417",
    "ExpandedHierarchyInLayout":"",
    "guistr":"# # String gsaved with Nlview 7.0r4  2019-12-20 bk=1.5203 VDI=41 GEI=36 GUI=JA:10.0 TLS
 #  -string -flagsOSRD
-levelinfo -pg 1 0 10
-pagesize -pg 1 -db -bbox -sgen 0 0 10 10
+preplace port SPI_M_0 -pg 1 -lvl 6 -x 2260 -y -390 -defaultsOSRD
+preplace port sys_clock -pg 1 -lvl 0 -x -340 -y -100 -defaultsOSRD
+preplace port reset -pg 1 -lvl 0 -x -340 -y -120 -defaultsOSRD
+preplace inst clk_wiz_0 -pg 1 -lvl 1 -x -70 -y -110 -defaultsOSRD
+preplace inst proc_sys_reset_0 -pg 1 -lvl 2 -x 550 -y -40 -defaultsOSRD
+preplace inst proc_sys_reset_1 -pg 1 -lvl 2 -x 550 -y -220 -defaultsOSRD
+preplace inst digilent_jstk2_0 -pg 1 -lvl 3 -x 1090 -y -370 -defaultsOSRD
+preplace inst axi4stream_spi_master_0 -pg 1 -lvl 4 -x 1580 -y -380 -defaultsOSRD
+preplace inst axis_dual_i2s_0 -pg 1 -lvl 5 -x 2130 -y -210 -defaultsOSRD -resize 180 216
+preplace netloc sys_clock_1 1 0 1 N -100
+preplace netloc reset_1 1 0 1 N -120
+preplace netloc axi4stream_spi_master_0_SPI_M 1 4 2 NJ -390 NJ
+levelinfo -pg 1 -340 -70 550 1090 1580 2130 2260
+pagesize -pg 1 -db -bbox -sgen -460 -520 2370 130
 "
 }
 
