--- a/AuDiOcOnSoLe/AuDiOcOnSoLe.srcs/sources_1/bd/BlockDesign/ui/bd_1f67aeeb.ui
+++ b/AuDiOcOnSoLe/AuDiOcOnSoLe.srcs/sources_1/bd/BlockDesign/ui/bd_1f67aeeb.ui
@@ -1,11 +1,11 @@
 {
    "ActiveEmotionalView":"Default View",
-   "Default View_ScaleFactor":"0.559316",
-   "Default View_TopLeft":"-445,-749",
+   "Default View_ScaleFactor":"0.411601",
+   "Default View_TopLeft":"-447,-1050",
    "ExpandedHierarchyInLayout":"",
    "guistr":"# # String gsaved with Nlview 7.0r6  2020-01-29 bk=1.5227 VDI=41 GEI=36 GUI=JA:10.0 non-TLS
 #  -string -flagsOSRD
-preplace port SPI_M_0 -pg 1 -lvl 6 -x 2260 -y -390 -defaultsOSRD
+preplace port SPI_M_0 -pg 1 -lvl 6 -x 1970 -y -390 -defaultsOSRD
 preplace port sys_clock -pg 1 -lvl 0 -x -340 -y -30 -defaultsOSRD
 preplace port reset -pg 1 -lvl 0 -x -340 -y -60 -defaultsOSRD
 preplace inst clk_wiz_0 -pg 1 -lvl 1 -x 210 -y -40 -defaultsOSRD
@@ -13,15 +13,17 @@ preplace inst proc_sys_reset_0 -pg 1 -lvl 2 -x 550 -y -40 -defaultsOSRD
 preplace inst proc_sys_reset_1 -pg 1 -lvl 2 -x 550 -y -220 -defaultsOSRD
 preplace inst digilent_jstk2_0 -pg 1 -lvl 3 -x 1090 -y -370 -defaultsOSRD
 preplace inst axi4stream_spi_master_0 -pg 1 -lvl 4 -x 1580 -y -380 -defaultsOSRD
-preplace inst axis_dual_i2s_0 -pg 1 -lvl 5 -x 1810 -y 60 -defaultsOSRD -resize 188 430
+preplace inst axis_dual_i2s_0 -pg 1 -lvl 5 -x 1830 -y 60 -defaultsOSRD -resize 188 430
+preplace inst Debouncer_0 -pg 1 -lvl 2 -x 550 -y -480 -defaultsOSRD
+preplace inst Debouncer_1 -pg 1 -lvl 2 -x 550 -y -620 -defaultsOSRD
 preplace netloc sys_clock_1 1 0 1 N -30
 preplace netloc reset_1 1 0 2 -320 -120 310
 preplace netloc clk_wiz_0_clk_out1 1 1 1 300 -260n
 preplace netloc clk_wiz_0_locked 1 1 1 320 -180n
 preplace netloc clk_wiz_0_clk_out2 1 1 1 330 -80n
 preplace netloc axi4stream_spi_master_0_SPI_M 1 4 2 NJ -390 N
-levelinfo -pg 1 -340 210 550 1090 1580 1810 2260
-pagesize -pg 1 -db -bbox -sgen -450 -520 2370 440
+levelinfo -pg 1 -340 210 550 1090 1580 1830 1970
+pagesize -pg 1 -db -bbox -sgen -450 -700 2080 440
 "
 }
 0
