--- a/AuDiOcOnSoLe/AuDiOcOnSoLe.srcs/sources_1/bd/BlockDesign/ui/bd_1f67aeeb.ui
+++ b/AuDiOcOnSoLe/AuDiOcOnSoLe.srcs/sources_1/bd/BlockDesign/ui/bd_1f67aeeb.ui
@@ -1,9 +1,9 @@
 {
    "ActiveEmotionalView":"Default View",
    "Default View_ScaleFactor":"0.530657",
-   "Default View_TopLeft":"-605,-820",
+   "Default View_TopLeft":"-605,-818",
    "ExpandedHierarchyInLayout":"",
-   "guistr":"# # String gsaved with Nlview 7.0r6  2020-01-29 bk=1.5227 VDI=41 GEI=36 GUI=JA:10.0 non-TLS-threadsafe
+   "guistr":"# # String gsaved with Nlview 7.0r6  2020-01-29 bk=1.5227 VDI=41 GEI=36 GUI=JA:10.0 non-TLS
 #  -string -flagsOSRD
 preplace port SPI_M_1 -pg 1 -lvl 8 -x 2080 -y -520 -defaultsOSRD
 preplace port sys_clock -pg 1 -lvl 0 -x -340 -y -40 -defaultsOSRD
@@ -18,28 +18,28 @@ preplace port tx_sdout_1 -pg 1 -lvl 8 -x 2080 -y -70 -defaultsOSRD
 preplace port tx_sclk_1 -pg 1 -lvl 8 -x 2080 -y -110 -defaultsOSRD
 preplace port tx_mclk_1 -pg 1 -lvl 8 -x 2080 -y -180 -defaultsOSRD
 preplace inst clk_wiz_0 -pg 1 -lvl 1 -x 160 -y -40 -defaultsOSRD
-preplace inst proc_sys_reset_0 -pg 1 -lvl 2 -x 450 -y -40 -defaultsOSRD
-preplace inst proc_sys_reset_1 -pg 1 -lvl 2 -x 450 -y -220 -defaultsOSRD
+preplace inst proc_sys_reset_0 -pg 1 -lvl 2 -x 460 -y -40 -defaultsOSRD
+preplace inst proc_sys_reset_1 -pg 1 -lvl 2 -x 460 -y -220 -defaultsOSRD
 preplace inst digilent_jstk2_0 -pg 1 -lvl 5 -x 1380 -y -700 -defaultsOSRD
-preplace inst Debouncer_0 -pg 1 -lvl 3 -x 780 -y -560 -defaultsOSRD
-preplace inst Debouncer_1 -pg 1 -lvl 3 -x 780 -y -400 -defaultsOSRD
+preplace inst Debouncer_0 -pg 1 -lvl 3 -x 790 -y -560 -defaultsOSRD
+preplace inst Debouncer_1 -pg 1 -lvl 3 -x 790 -y -400 -defaultsOSRD
 preplace inst EdgeDetector_0 -pg 1 -lvl 4 -x 1080 -y -560 -defaultsOSRD
 preplace inst EdgeDetector_1 -pg 1 -lvl 4 -x 1080 -y -400 -defaultsOSRD
-preplace inst MovingAverageFilter_0 -pg 1 -lvl 5 -x 1380 -y -220 -defaultsOSRD
 preplace inst axi4stream_spi_master_1 -pg 1 -lvl 6 -x 1630 -y -510 -defaultsOSRD
 preplace inst axis_dual_i2s_1 -pg 1 -lvl 7 -x 1900 -y -130 -defaultsOSRD
+preplace inst MovingAverageFilter_0 -pg 1 -lvl 5 -x 1380 -y -220 -defaultsOSRD
 preplace netloc sys_clock_1 1 0 1 -320 -40n
 preplace netloc reset_1 1 0 2 -320 -120 260
-preplace netloc clk_wiz_0_clk_out1 1 1 6 250 -320 620 -650 920 -650 1230 -330 1510 -330 1760
+preplace netloc clk_wiz_0_clk_out1 1 1 6 250 -320 630 -650 930 -650 1230 -330 1510 -330 1760
 preplace netloc clk_wiz_0_locked 1 1 1 270 -180n
-preplace netloc clk_wiz_0_clk_out2 1 1 6 280 60 640 -130 N -130 N -130 N -130 1730
+preplace netloc clk_wiz_0_clk_out2 1 1 6 280 60 650 -130 N -130 N -130 N -130 1730
 preplace netloc proc_sys_reset_0_peripheral_aresetn 1 2 5 NJ 0 NJ 0 NJ 0 NJ 0 1750
-preplace netloc proc_sys_reset_1_peripheral_reset 1 2 2 630 -480 930
+preplace netloc proc_sys_reset_1_peripheral_reset 1 2 2 640 -480 940
 preplace netloc proc_sys_reset_1_peripheral_aresetn 1 2 5 N -180 NJ -180 1220J -320 1520 -320 1740
-preplace netloc digilent_jstk2_0_btn_trigger 1 2 4 650 -640 NJ -640 1210J -580 1510
-preplace netloc digilent_jstk2_0_btn_jstk 1 2 4 640 -660 NJ -660 1240J -590 1520
-preplace netloc Debouncer_0_debounced 1 3 1 910 -560n
-preplace netloc Debouncer_1_debounced 1 3 1 910 -400n
+preplace netloc digilent_jstk2_0_btn_trigger 1 2 4 660 -640 NJ -640 1210J -580 1510
+preplace netloc digilent_jstk2_0_btn_jstk 1 2 4 650 -660 NJ -660 1240J -590 1520
+preplace netloc Debouncer_0_debounced 1 3 1 920 -560n
+preplace netloc Debouncer_1_debounced 1 3 1 920 -400n
 preplace netloc EdgeDetector_1_output_signal 1 4 1 1210 -400n
 preplace netloc axis_dual_i2s_1_tx_lrck 1 7 1 2040J -160n
 preplace netloc rx_sdin_1_1 1 0 7 NJ 70 NJ 70 NJ 70 NJ 70 NJ 70 NJ 70 1760J
@@ -49,12 +49,12 @@ preplace netloc axis_dual_i2s_1_rx_mclk 1 7 1 2020J -100n
 preplace netloc axis_dual_i2s_1_tx_sdout 1 7 1 2030J -120n
 preplace netloc axis_dual_i2s_1_tx_sclk 1 7 1 2040J -140n
 preplace netloc axis_dual_i2s_1_tx_mclk 1 7 1 NJ -180
+preplace netloc axis_dual_i2s_1_m_axis 1 4 4 1240 -310 NJ -310 NJ -310 2040
+preplace netloc axi4stream_spi_master_1_M_AXIS 1 4 3 1240 -810 NJ -810 1760
 preplace netloc digilent_jstk2_0_m_axis 1 5 1 1530 -740n
 preplace netloc axi4stream_spi_master_1_SPI_M 1 6 2 NJ -520 NJ
-preplace netloc axi4stream_spi_master_1_M_AXIS 1 4 3 1240 -810 NJ -810 1760
-preplace netloc axis_dual_i2s_1_m_axis 1 4 4 1240 -310 NJ -310 NJ -310 2040
 preplace netloc MovingAverageFilter_0_M_AXIS 1 5 2 NJ -220 1750
-levelinfo -pg 1 -340 160 450 780 1080 1380 1630 1900 2080
+levelinfo -pg 1 -340 160 460 790 1080 1380 1630 1900 2080
 pagesize -pg 1 -db -bbox -sgen -450 -930 2200 550
 "
 }
