--- a/AuDiOcOnSoLe/AuDiOcOnSoLe.srcs/sources_1/bd/BlockDesign/ui/bd_1f67aeeb.ui
+++ b/AuDiOcOnSoLe/AuDiOcOnSoLe.srcs/sources_1/bd/BlockDesign/ui/bd_1f67aeeb.ui
@@ -1,7 +1,7 @@
 {
    "ActiveEmotionalView":"Default View",
    "Default View_ScaleFactor":"0.578909",
-   "Default View_TopLeft":"-446,-943",
+   "Default View_TopLeft":"-446,-941",
    "ExpandedHierarchyInLayout":"",
    "guistr":"# # String gsaved with Nlview 7.0r6  2020-01-29 bk=1.5227 VDI=41 GEI=36 GUI=JA:10.0 non-TLS
 #  -string -flagsOSRD
@@ -10,7 +10,6 @@ preplace port sys_clock -pg 1 -lvl 0 -x -340 -y -40 -defaultsOSRD
 preplace port reset -pg 1 -lvl 0 -x -340 -y -70 -defaultsOSRD
 preplace port rx_sdin_0 -pg 1 -lvl 0 -x -340 -y 210 -defaultsOSRD
 preplace port tx_lrck_1 -pg 1 -lvl 8 -x 2150 -y -150 -defaultsOSRD
-preplace port rx_sdin_1 -pg 1 -lvl 0 -x -340 -y 70 -defaultsOSRD
 preplace port rx_sclk_1 -pg 1 -lvl 8 -x 2150 -y 30 -defaultsOSRD
 preplace port rx_lrck_1 -pg 1 -lvl 8 -x 2150 -y 0 -defaultsOSRD
 preplace port rx_mclk_1 -pg 1 -lvl 8 -x 2150 -y -30 -defaultsOSRD
@@ -44,7 +43,6 @@ preplace netloc Debouncer_0_debounced 1 3 1 940 -560n
 preplace netloc Debouncer_1_debounced 1 3 1 920 -400n
 preplace netloc EdgeDetector_1_output_signal 1 4 1 1250 -410n
 preplace netloc axis_dual_i2s_1_tx_lrck 1 7 1 2130J -160n
-preplace netloc rx_sdin_1_1 1 0 7 NJ 70 NJ 70 NJ 70 NJ 70 NJ 70 NJ 70 1890J
 preplace netloc axis_dual_i2s_1_rx_sclk 1 7 1 2090J -60n
 preplace netloc axis_dual_i2s_1_rx_lrck 1 7 1 2100J -80n
 preplace netloc axis_dual_i2s_1_rx_mclk 1 7 1 2110J -100n
@@ -55,6 +53,7 @@ preplace netloc EdgeDetector_0_output_signal 1 4 2 1220 -510 1550
 preplace netloc LedController_0_led_b 1 4 2 1260 -580 1520
 preplace netloc LedController_0_led_g 1 4 2 1250 -820 1530
 preplace netloc LedController_0_led_r 1 4 2 1240 -830 1540
+preplace netloc rx_sdin_0_1 1 0 7 NJ 210 NJ 210 NJ 210 NJ 210 NJ 210 NJ 210 1890
 preplace netloc digilent_jstk2_0_m_axis 1 5 1 1570 -740n
 preplace netloc axi4stream_spi_master_1_SPI_M 1 6 2 1850J -520 NJ
 preplace netloc axis_dual_i2s_1_m_axis 1 4 4 1260 -560 NJ -560 NJ -560 2130
